2000-08-14  Eric Melski  <ericm@ajubasolutions.com>

	* README: Updated link for instructions on compiling Tcl from sources to
	point to correct location (http://dev.scriptics.com/doc/... instead of
	http://dev.scriptics.com/support/...).

2000-08-11  Eric Melski  <ericm@ajubasolutions.com>

	* generic/tclEnv.c (TclUnsetEnv): Changed declaration of length
	variable from "unsigned int" to "int", to match usage when passed
	to TclpFindVariable [Bug: 6126].

2000-08-10  Eric Melski  <ericm@ajubasolutions.com>

	* library/msgcat1.0/pkgIndex.tcl: Bumped version number to 1.2
	[Bug: 6100].

	* library/msgcat1.0/msgcat.tcl: Removed erroneous [package forget]
	in msgcat namespace initializer.  Bumped version number to 1.2
	[Bug: 6100].

2000-08-10  David Gravereaux <davygrvy@ajubasolutions.com>

	* generic/tclObj.c: r1.15 accidentally changed a global mutex
	name tclObjMutex to ObjMutex.  Put the correct name back.

2000-08-07  Eric Melski  <ericm@ajubasolutions.com>

	* tests/indexObj.test: Added tests using the [testwrongnumargs]
	command to test Tcl_WrongNumArgs.

	* generic/tclTest.c (TestWrongNumArgsObjCmd): Added test function
	for the Tcl_WrongNumArgs function.

	* generic/tclIndexObj.c (Tcl_WrongNumArgs): Corrected algorithm to
	not insert a space before the message component when objc == 0
	[Bug: 6078].

2000-07-27  Mo DeJong  <mdejong@redhat.com>

	* win/configure.in: TCL_STUB_LIB_FLAG should not
	include ${TCL_DBGX} in win/tclConfig.sh, fix that.

2000-07-25  David Gravereaux  <davygrvy@ajubasolutions.com>

	* doc/Async.3:
	* generic/tclAsync.c:
	* generic/tclInt.decls:
	* generic/tclIntPlatDecls.h:
	* generic/tclStubInit.c:
	* generic/tclTest.c:
	* mac/tclMacPort.h:
	* unix/tclUnixPort.h:
	* win/tclWinInit.c:  Thread-safe rewrite for tclAsync.c.  Added
	notifier alerting on all platforms as it was only working on Win
	before.  Removed older Win hacks that would end-up waking the
	wrong notifier in the presence of a threaded build.  All tests